--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -1000,17 +1000,17 @@ nav {
     }
     .popular {
       position: absolute;
-      right: -35px;
-      top: 58px;
+      right: 35px;
+      top:0;
       background: var(--main-color);
       color: var(--hov-color);
-      -webkit-clip-path: polygon(100% 0, 90% 50%, 100% 100%, 0 100%, 0 0);
-      clip-path: polygon(100% 0, 90% 50%, 100% 100%, 0 100%, 0 0);
-      padding: 10px 30px 10px 15px;
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 80%, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 85%, 0 100%);
+      padding:10px 10px 30px;
       font-weight: bold;
       font-size: 20px;
-      transform: rotate(90deg);
-      border-radius: 5px 0 0 5px;
+      writing-mode: vertical-lr;
+      border-radius: 5px 5px 0 0;
     }
   }
   .box > button a {
